--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style/css/style.css">
 </head>
 <body>
-		<div class="earth_1"><img src="img/space.jpg" id="earth_1_img"></img></div>
+		<div class="earth_1"><img src="img/space.jpg" id="earth_1_img"></div>
 		<div id="balkon">
 			<header class="header">
 				<div class="container">
