--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
 							</div>
 							<div class="collapse navbar-collapse" id="menu">
 
-								<a href="#" class="nav_item ni1">
-									<div class="nav_item_hover opacity">
+								<a href="#" class="nav_item about ni1">
+									<div class="nav_item_hover ">
 										<div class="orangehex">
 											<img src="img/hex2.png" alt="">
 										</div>
