--- a/app/index.html
+++ b/app/index.html
@@ -188,8 +188,6 @@
 				</div>		
 			</section>
 		</div>
-
-	
 	<section class="sect_two" id="sect_two">
 		<div class="container sect_two_container">
 			<div class="row">
@@ -197,7 +195,7 @@
 					<div class="solutions sect_two_info">
 						<h3 class="info_tittle">SOLUTIONS</h3>
 						<p class="hex_2_text">
-							Best ready-made solutions for those who value premium service, high quality and innovation
+							BetInvest is a single entry point for the whole eco-system of sports-betting products and related I-Gaming services.
 						</p>
 					</div>
 					<div class="info_btn">
