--- a/app/index.html
+++ b/app/index.html
@@ -94,11 +94,11 @@
 				<div id="fly_car">
 					<img src="img/bg_2.png" alt="" id="fly_car_img" class="d-none">
 				</div>
-				<section class="main_sect" id="main_sect">
-					<div class="container-fluid">
-						<div class="container main_sect_container">
+				<section class="main_sect " id="main_sect">
+					<div class="container-fluid ">
+						<div class="container main_sect_container ">
 							<div class="row">
-								<ul id="ball_con" class="ball_con">
+								<ul id="ball_con" class="ball_con ">
 									<li><img src="img/ball_01.png" alt="" class="ball_1 ball"></li>
 									<li><img src="img/ball_02.png" alt="" class="ball_2 ball animated bounce faster"></li>
 									<li><img src="img/ball_03.png" alt="" class="ball_3 ball animated bounce"></li>
@@ -314,7 +314,13 @@
 			</div>
 		</div>
 	</section>
-	
+	<section id="sect_t" class="sect_t">
+		<div class="container sect_t_cont">
+			<div class="row">
+
+			</div>
+		</div>
+	</section>
 	<footer>
 		<div id="preloader">
 		</div>
