--- a/app/index.html
+++ b/app/index.html
@@ -146,25 +146,25 @@
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
-											<li class="main_nav_item">
+											<li  data-menuanchor="sect_four" class="main_nav_item">
 												<a href="#">
 													<span class="main_nav_href">Partners</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
-											<li class="main_nav_item">
+											<li  data-menuanchor="sect_five" class="main_nav_item">
 												<a href="#">
 													<span class="main_nav_href">Contacts</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
-											<li class="main_nav_item">
+											<li  data-menuanchor="sect_six" class="main_nav_item">
 												<a href="#">
 													<span class="main_nav_href">#</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
-											<li class="main_nav_item">
+											<li data-menuanchor="footer" class="main_nav_item">
 												<a href="#">
 													<span class="main_nav_href">#</span>
 													<span class="main_nav_item_icon"></span>
@@ -251,37 +251,37 @@
 							</div>
 							<div id="main_nav_2" class="main_nav d-none">
 								<ul class="main_nav_list">
-									<li class="main_nav_item" id="nav_about">
+									<li data-menuanchor="sect_two" class="main_nav_item" id="nav_about">
 										<a href="#">
 											<span class="main_nav_href">About</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_t" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Solutions</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_four" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Products</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_five" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Partners</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_six" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Contacts</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="footer" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
@@ -660,10 +660,9 @@
 										<a href="#" class="social_icon">
 											<i class="fab fa-telegram"></i>
 										</a>
-										<img src="img/point_1.png" alt="" class="point_1_img point_img">
-									</div>
 								</div>
-								
+									<img src="img/point_1.png" alt="" class="point_1_img point_img">
+								</div>	
 							</div>
 							<div class="hexagon hex_1">
 								<div class="t_hex_info">
@@ -682,59 +681,60 @@
 						</div>
 					</div>
 				</section>
+				<footer class="footer section">
+					<div class="container footer_cont">
+						<div class="row col-md-12 f_con_row">
+							<div class="f_menu">
+								<div class="f_about f_menu_item">
+									<h3>About</h3>
+								</div>
+								<div class="f_solutions f_menu_item">
+									<h3>Solution</h3>
+									<a href="#">DATA FEED</a>
+									<a href="#">LOTTERY</a>
+									<a href="#">SOLUTIONS 1</a>
+									<a href="#">SOLUTIONS 2</a>
+									<a href="#">SOLUTIONS 3</a>
+								</div>
+								<div class="f_products f_menu_item">
+									<h3>Products</h3>
+									<a href="#">DATA FEED</a>
+									<a href="#">LOTTERY</a>
+									<a href="#">SOLUTIONS 1</a>
+									<a href="#">SOLUTIONS 2</a>
+									<a href="#">SOLUTIONS 3</a>
+								</div>
+								<div class="f_partners f_menu_item">
+									<h3>parthers</h3>
+								</div>
+								<div class="contacts f_menu_item">
+									<h3>contacts</h3>
+								</div>
+							</div>
+							<div class="social">
+								<h3>Follow Us</h3>
+								<a href="#" class="social_icon">
+									<i class="fab fa-whatsapp"></i>
+								</a>
+								<a href="#" class="social_icon">
+									<i class="fab fa-viber"></i>
+								</a>
+								<a href="#" class="social_icon">
+									<i class="fab fa-telegram"></i>
+								</a>
+							</div>
+							<div></div>
+							<p class="copir">2018. BetInvest. All Rights Reserved.</p>
+							<div class="join_us">
+								<a href="#">Join Us <img src="img/join_icon.png" alt="join Us"></a>
+							</div>
+						</div>
+					</div>
+					<div id="preloader">
+					</div>
+				</footer>
 			</div>			
-	<footer class="footer">
-		<div class="container footer_cont">
-			<div class="row col-md-12 f_con_row">
-				<div class="f_menu">
-					<div class="f_about f_menu_item">
-						<h3>About</h3>
-					</div>
-					<div class="f_solutions f_menu_item">
-						<h3>Solution</h3>
-						<a href="#">DATA FEED</a>
-						<a href="#">LOTTERY</a>
-						<a href="#">SOLUTIONS 1</a>
-						<a href="#">SOLUTIONS 2</a>
-						<a href="#">SOLUTIONS 3</a>
-					</div>
-					<div class="f_products f_menu_item">
-						<h3>Products</h3>
-						<a href="#">DATA FEED</a>
-						<a href="#">LOTTERY</a>
-						<a href="#">SOLUTIONS 1</a>
-						<a href="#">SOLUTIONS 2</a>
-						<a href="#">SOLUTIONS 3</a>
-					</div>
-					<div class="f_partners f_menu_item">
-						<h3>parthers</h3>
-					</div>
-					<div class="contacts f_menu_item">
-						<h3>contacts</h3>
-					</div>
-				</div>
-				<div class="social">
-					<h3>Follow Us</h3>
-					<a href="#" class="social_icon">
-						<i class="fab fa-whatsapp"></i>
-					</a>
-					<a href="#" class="social_icon">
-						<i class="fab fa-viber"></i>
-					</a>
-					<a href="#" class="social_icon">
-						<i class="fab fa-telegram"></i>
-					</a>
-				</div>
-				<div></div>
-				<p class="copir">2018. BetInvest. All Rights Reserved.</p>
-				<div class="join_us">
-					<a href="#">Join Us <img src="img/join_icon.png" alt="join Us"></a>
-				</div>
-			</div>
-		</div>
-		<div id="preloader">
-		</div>
-	</footer>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.js" integrity="sha256-EiCmSFmFAXsxVM9CAGPTzHtrXdWVvY8rj+IM52SU5xU=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
