--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
 	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.css" integrity="sha256-9F8EW3cD9kJEEvTeWIoO9R1Yf0xWV8I98FZvSHUPrAI=" crossorigin="anonymous"/>
+	 <link rel="stylesheet" href="style/css/fullpage.css">
 	<link rel="stylesheet" href="style/css/style.css">
 </head>
 <body>
@@ -129,7 +129,7 @@
 									<div id="main_nav" class="main_nav d-none">
 										<ul class="main_nav_list">
 											<li class="main_nav_item" id="nav_about">
-												<a href="#">
+												<a href="#main">
 													<span class="main_nav_href">About</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
@@ -147,25 +147,25 @@
 												</a>
 											</li>
 											<li  data-menuanchor="sect_four" class="main_nav_item">
-												<a href="#">
+												<a href="#sect-four">
 													<span class="main_nav_href">Partners</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
 											<li  data-menuanchor="sect_five" class="main_nav_item">
-												<a href="#">
+												<a href="#sect_five">
 													<span class="main_nav_href">Contacts</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
 											<li  data-menuanchor="sect_six" class="main_nav_item">
-												<a href="#">
+												<a href="#sect_six">
 													<span class="main_nav_href">#</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
 											</li>
 											<li data-menuanchor="footer" class="main_nav_item">
-												<a href="#">
+												<a href="#footer">
 													<span class="main_nav_href">#</span>
 													<span class="main_nav_item_icon"></span>
 												</a>
@@ -173,9 +173,9 @@
 										</ul>
 									</div>
 
-									<div id="scroll_down" class="d-none scroll_down text-center animate faideInUp infinite">
+									<div id="scroll_down" class="d-none scroll_down text-center animate faideInUp">
 										<a href="#sect_two" class="d-none d-lg-block">
-											<img src="img/icon-scroll.png" alt="scroll" class="animated bounce infinite">
+											<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
 											<p>scroll down</p>
 										</a>
 										<a href="#sect_two" class="d-lg-none d-md-block">
@@ -295,9 +295,9 @@
 									</li>
 								</ul>
 							</div>				
-							<div id="scroll_down_2" class="d-none scroll_down text-center animate faideInUp infinite">
+							<div id="scroll_down_2" class="d-none scroll_down text-center animate faideInUp">
 								<a href="#sect_t" class="d-none d-lg-block">
-									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce infinite">
+									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce  anime">
 									<p>scroll down</p>
 								</a>
 								<a href="#sect_t" class="d-lg-none d-md-block">
@@ -313,7 +313,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="sect_t" class="sect_t section">
+				<section class="sect_t section" id="sect_t">
 					<div class="container sect_t_cont">
 						<div class="row">
 							<div class="hexagon hex_2">
@@ -407,9 +407,9 @@
 									</li>
 								</ul>
 							</div>				
-							<div class="scroll_down text-center animate faideInUp infinite">
+							<div class="scroll_down text-center animate faideInUp">
 								<a href="#" class="d-none d-lg-block">
-									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce infinite">
+									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
 									<p>scroll down</p>
 								</a>
 								<a href="#" class="d-lg-none d-md-block">
@@ -425,7 +425,7 @@
 						</div>
 					</div>
 				</section>
-				<section id=sect-four class="sect_four section">
+				<section class="sect_four section" id=sect-four>
 					<div class="container sect_four_cont">
 						<div class="row">
 							<div class="hexagon hex_2">
@@ -512,9 +512,9 @@
 									</li>
 								</ul>
 							</div>				
-							<div class="scroll_down text-center animate faideInUp infinite">
+							<div class="scroll_down text-center animate faideInUp">
 								<a href="#" class="d-none d-lg-block">
-									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce infinite">
+									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
 									<p>scroll down</p>
 								</a>
 								<a href="#" class="d-lg-none d-md-block">
@@ -530,7 +530,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="sect_five" class="sect_five section">
+				<section class="sect_five section" id="sect_five">
 					<div class="container sect_five_cont">
 						<div class="row">
 							<div class="hexagon hex_1">
@@ -621,9 +621,9 @@
 									</li>
 								</ul>
 							</div>				
-							<div class="scroll_down text-center animate faideInUp infinite">
+							<div class="scroll_down text-center animate faideInUp">
 								<a href="#" class="d-none d-lg-block">
-									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce infinite">
+									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
 									<p>scroll down</p>
 								</a>
 								<a href="#" class="d-lg-none d-md-block">
@@ -639,7 +639,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="sect_six" class="sect_six section">
+				<section class="sect_six section" id="sect_six">
 					<div class="container sect_six_cont">
 						<div class="row">
 							<div class="point_1 point">
@@ -678,10 +678,19 @@
 									<a href="#" class="sect_six_btn_1"><img src="img/sect_six_btn.png" alt=""></a>
 								</div>
 							</div>
+							<div class="scroll_down text-center animate faideInUp">
+								<a href="#" class="d-none d-lg-block">
+									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
+									<p>scroll down</p>
+								</a>
+								<a href="#" class="d-lg-none d-md-block">
+									<img src="img/icon-scroll2.png" alt="scroll class=">
+								</a>
+							</div>
 						</div>
 					</div>
 				</section>
-				<footer class="footer section">
+				<footer class="footer section" id="footer">
 					<div class="container footer_cont">
 						<div class="row col-md-12 f_con_row">
 							<div class="f_menu">
@@ -736,7 +745,7 @@
 			</div>			
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.js" integrity="sha256-EiCmSFmFAXsxVM9CAGPTzHtrXdWVvY8rj+IM52SU5xU=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/fullpage.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>	
 </body>
