--- a/app/index.html
+++ b/app/index.html
@@ -550,12 +550,14 @@
 							<div class="img_cont">
 								<div class="hex_tb_1">
 									<img src="img/team_1.png" alt="" class="hex_img_1">
+<!--
 									<div class="overlay">
 										<div class="overlay_text">
 											<h3 class="ov_tittle">Sergey Sergeev <br>ceo</h3>
 											<p class="ov_txt">Our platform is a powerful and multifunctional tool that connects all your operations.</p>
 										</div>
 									</div>
+-->
 								</div>
 								<div class="hex_tb_2">
 									<img src="img/team_2.png" alt="" class="hex_img_2">
@@ -571,7 +573,7 @@
 								</div>
 								<div class="hex_tb_5">
 									<img src="img/team_1.png" alt="" class="hex_img_5">
-									<div class="overlay"></div>
+<!--									<div class="overlay"></div>-->
 								</div>
 							</div>
 
@@ -642,6 +644,7 @@
 				<section id="sect_six" class="sect_six section">
 					<div class="container sect_six_cont">
 						<div class="row">
+							<!-- popup_map_hexagon -->
 							<div class="point_1 point">
 								
 								<div class="point_hex">
@@ -660,9 +663,9 @@
 										<a href="#" class="social_icon">
 											<i class="fab fa-telegram"></i>
 										</a>
+									</div>
 								</div>
-									<img src="img/point_1.png" alt="" class="point_1_img point_img">
-								</div>	
+								<!-- End popup_map_hexagon -->	
 							</div>
 							<div class="hexagon hex_1">
 								<div class="t_hex_info">
@@ -678,6 +681,58 @@
 									<a href="#" class="sect_six_btn_1"><img src="img/sect_six_btn.png" alt=""></a>
 								</div>
 							</div>
+							<!--  Sidebar menu	-->
+							<div class="main_nav">
+								<ul class="main_nav_list">
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">About</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">Solutions</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">Products</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">Partners</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">Contacts</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">#</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+									<li class="main_nav_item">
+										<a href="#">
+											<span class="main_nav_href">#</span>
+											<span class="main_nav_item_icon"></span>
+										</a>
+									</li>
+								</ul>
+						</div>
+						<!--  End sidebar menu	-->
+						
+						<!-- Map marks -->
+							.mp-marks-item*
+						<!-- End map marks -->	
 						</div>
 					</div>
 				</section>
