section map markers

--- a/app/index.html
+++ b/app/index.html
@@ -550,14 +550,12 @@
 							<div class="img_cont">
 								<div class="hex_tb_1">
 									<img src="img/team_1.png" alt="" class="hex_img_1">
-<!--
 									<div class="overlay">
 										<div class="overlay_text">
 											<h3 class="ov_tittle">Sergey Sergeev <br>ceo</h3>
 											<p class="ov_txt">Our platform is a powerful and multifunctional tool that connects all your operations.</p>
 										</div>
 									</div>
--->
 								</div>
 								<div class="hex_tb_2">
 									<img src="img/team_2.png" alt="" class="hex_img_2">
@@ -681,7 +679,6 @@
 									<a href="#" class="sect_six_btn_1"><img src="img/sect_six_btn.png" alt=""></a>
 								</div>
 							</div>
-<<<<<<< HEAD
 							<!--  Sidebar menu	-->
 							<div class="main_nav">
 								<ul class="main_nav_list">
@@ -732,9 +729,13 @@
 						<!--  End sidebar menu	-->
 						
 						<!-- Map marks -->
-							.mp-marks-item*
+							<div class="mp-marks-item one"><img src="img/point_1.png" alt=""></div>
+							<div class="mp-marks-item two"><img src="img/point_2.png" alt=""></div>
+							<div class="mp-marks-item third"><img src="img/point_3.png" alt=""></div>
+							<div class="mp-marks-item fourth"><img src="img/point_4.png" alt=""></div>
+							<div class="mp-marks-item five"><img src="img/point_5.png" alt=""></div>
+							<div class="mp-marks-item six"><img src="img/point_6.png" alt=""></div>
 						<!-- End map marks -->	
-=======
 							<div class="scroll_down text-center animate faideInUp">
 								<a href="#" class="d-none d-lg-block">
 									<img src="img/icon-scroll.png" alt="scroll" class="animated bounce anime">
@@ -744,7 +745,6 @@
 									<img src="img/icon-scroll2.png" alt="scroll class=">
 								</a>
 							</div>
->>>>>>> e90590d1de925c8a60b65f43feb069eff20b08fc
 						</div>
 					</div>
 				</section>
