two last section's 1920/1200/992  +footer

--- a/app/index.html
+++ b/app/index.html
@@ -550,12 +550,14 @@
 							<div class="img_cont">
 								<div class="hex_tb_1">
 									<img src="img/team_1.png" alt="" class="hex_img_1">
+<!--
 									<div class="overlay">
 										<div class="overlay_text">
 											<h3 class="ov_tittle">Sergey Sergeev <br>ceo</h3>
 											<p class="ov_txt">Our platform is a powerful and multifunctional tool that connects all your operations.</p>
 										</div>
 									</div>
+-->
 								</div>
 								<div class="hex_tb_2">
 									<img src="img/team_2.png" alt="" class="hex_img_2">
@@ -744,6 +746,10 @@
 								<a href="#" class="d-lg-none d-md-block">
 									<img src="img/icon-scroll2.png" alt="scroll class=">
 								</a>
+							</div>
+							
+							<div id="join_2" class="join_us">
+								<a href="#">Join Us <img src="img/join_icon.png" alt="join Us"></a>
 							</div>
 						</div>
 					</div>
