--- a/app/index.html
+++ b/app/index.html
@@ -275,25 +275,25 @@
 										</a>
 									</li>
 									<li data-menuanchor="sect_four" class="main_nav_item">
-										<a href="#">
+										<a href="#sect_four">
 											<span class="main_nav_href">Partners</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
 									<li data-menuanchor="sect_five" class="main_nav_item">
-										<a href="#">
+										<a href="#sect_five">
 											<span class="main_nav_href">Contacts</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li data-menuanchor="footer" class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="sect_six" class="main_nav_item">
+										<a href="#sect_six">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="footer" class="main_nav_item">
+										<a href="#footer">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
@@ -375,7 +375,7 @@
 										</a>
 									</li>
 									<li data-menuanchor="sect_two" class="main_nav_item">
-										<a href="# sect_two">
+										<a href="#sect_two">
 											<span class="main_nav_href">Solutions</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
@@ -473,44 +473,44 @@
 							</div>
 							<div class="main_nav">
 								<ul class="main_nav_list">
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="main_sect" class="main_nav_item">
+										<a href="#main_sect">
 											<span class="main_nav_href">About</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li   data-menuanchor="sect_two" class="main_nav_item">
+										<a href="#sect_two">
 											<span class="main_nav_href">Solutions</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="sect_t" class="main_nav_item">
+										<a href="#sect_t">
 											<span class="main_nav_href">Products</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_four" class="main_nav_item">
+										<a href="#sect_four">
 											<span class="main_nav_href">Partners</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_five" class="main_nav_item">
+										<a href="#sect_five">
 											<span class="main_nav_href">Contacts</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_six" class="main_nav_item">
+										<a href="#sect_six">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="footer" class="main_nav_item">
+										<a href="#footer">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
@@ -555,14 +555,6 @@
 							<div class="img_cont">
 								<div class="hex_tb_1">
 									<img src="img/team_1.png" alt="" class="hex_img_1">
-<!--
-									<div class="overlay">
-										<div class="overlay_text">
-											<h3 class="ov_tittle">Sergey Sergeev <br>ceo</h3>
-											<p class="ov_txt">Our platform is a powerful and multifunctional tool that connects all your operations.</p>
-										</div>
-									</div>
--->
 								</div>
 								<div class="hex_tb_2">
 									<img src="img/team_2.png" alt="" class="hex_img_2">
@@ -578,50 +570,49 @@
 								</div>
 								<div class="hex_tb_5">
 									<img src="img/team_1.png" alt="" class="hex_img_5">
-<!--									<div class="overlay"></div>-->
 								</div>
 							</div>
 
 							<div class="main_nav">
 								<ul class="main_nav_list">
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="main_sect" class="main_nav_item">
+										<a href="#main_sect">
 											<span class="main_nav_href">About</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_two" class="main_nav_item">
+										<a href="#sect_two">
 											<span class="main_nav_href">Solutions</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_t"  class="main_nav_item">
+										<a href="#sect_t">
 											<span class="main_nav_href">Products</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_four" class="main_nav_item">
+										<a href="#sect_four">
 											<span class="main_nav_href">Partners</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_five" class="main_nav_item">
+										<a href="#sect_five">
 											<span class="main_nav_href">Contacts</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="sect_six" class="main_nav_item">
+										<a href="#sect_six">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li  data-menuanchor="footer" class="main_nav_item">
+										<a href="#footer">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
@@ -689,44 +680,44 @@
 							<!--  Sidebar menu	-->
 							<div class="main_nav">
 								<ul class="main_nav_list">
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="main_sect" class="main_nav_item">
+										<a href="#main_sect">
 											<span class="main_nav_href">About</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_two" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Solutions</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_t" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Products</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
+									<li data-menuanchor="sect_four" class="main_nav_item">
 										<a href="#">
 											<span class="main_nav_href">Partners</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="sect_five" class="main_nav_item">
+										<a href="#sect_five">
 											<span class="main_nav_href">Contacts</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="sect_six" class="main_nav_item">
+										<a href="#sect_six">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
 									</li>
-									<li class="main_nav_item">
-										<a href="#">
+									<li data-menuanchor="footer" class="main_nav_item">
+										<a href="#footer">
 											<span class="main_nav_href">#</span>
 											<span class="main_nav_item_icon"></span>
 										</a>
@@ -816,6 +807,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.extensions.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/vendors/easings.js"></script>
     <script defer src="js/main.js"></script>	
 </body>
 </html>
