--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 						<div class="container">
 							<div class="row header_cont">
 								<div class="logo_container offset-1">
-									<a href="#">
+									<a href="#main_sect">
 										<img src="img/logo.png" alt="logo" class="">
 									</a>
 								</div>
@@ -31,7 +31,7 @@
 									</div>
 									<div class="collapse navbar-collapse" id="menu">
 
-										<a href="#" class="nav_item about ni1">
+										<a href="#main_sect" class="nav_item about ni1">
 											<div class="nav_item_hover ">
 												<div class="orangehex">
 													<img src="img/hex2.png" alt="">
@@ -42,7 +42,7 @@
 											</div>
 											About
 										</a>
-										<a href="#" class="nav_item ni2">
+										<a href="#sect_two" class="nav_item ni2">
 											<div class="nav_item_hover">
 												<div class="orangehex">
 													<img src="img/hex2.png" alt="">
@@ -53,7 +53,7 @@
 											</div>
 											Solutions
 										</a>
-										<a href="#" class="nav_item ni3">
+										<a href="#sect_t" class="nav_item ni3">
 											<div class="nav_item_hover">
 												<div class="orangehex">
 													<img src="img/hex2.png" alt="">
@@ -64,7 +64,7 @@
 											</div>
 											Products
 										</a>
-										<a href="#" class="nav_item ni4">
+										<a href="#sect_four" class="nav_item ni4">
 											<div class="nav_item_hover">
 												<div class="orangehex">
 													<img src="img/hex2.png" alt="">
@@ -75,7 +75,7 @@
 											</div>
 											Partners
 										</a>
-										<a href="#" class="nav_item ni5">
+										<a href="#sect_six" class="nav_item ni5">
 											<div class="nav_item_hover">
 												<div class="orangehex">
 													<img src="img/hex2.png" alt="">
