--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 			<header id="header" class="header d-none">
 						<div class="container">
 							<div class="row header_cont">
-								<div class="logo_container offset-1">
+								<div class="logo_container offset-1 d-none">
 									<a href="#">
 										<img src="img/logo.png" alt="logo" class="">
 									</a>
@@ -112,7 +112,7 @@
 										<li><img src="img/ball_05.png" alt="" class="ball_5 ball animated bounce slow"></li>
 									</ul>
 									<h3 id="main_tittle" class="main_tittle d-none offset-1"><span class="orange">Investing</span> in saccess</h3>
-									<div id="mInfo" class="hexagon info_about">
+									<div id="mInfo" class="d-none hexagon info_about">
 										<h2 class="info_tittle">About</h2>
 										<div class="info_about_text">
 											<p>
