--- a/app/index.html
+++ b/app/index.html
@@ -235,7 +235,7 @@
 							<div class="watch_video">
 								<img src="img/video_img.png" alt="video" class="img_video">
 								<div class="info_btn video_btn">
-									<a href="#" class="learn_m">See<br>Video</a>
+									<a href="#" class="learn_m"></a>
 								</div>
 							</div>
 							<div class="hexagon sect_two_hex_4">
@@ -349,7 +349,7 @@
 							<div class="watch_video">
 								<img src="img/sect_3_video.png" alt="video" class="img_video">
 								<div class="info_btn video_btn">
-									<a href="#" class="learn_m">See<br>Video</a>
+									<a href="#" class="learn_m"></a>
 								</div>
 							</div>
 							<div class="hexagon hex_4">
